--- a/cv-application/src/styles/App.css
+++ b/cv-application/src/styles/App.css
@@ -7,6 +7,7 @@
   grid-template-areas:
     "title"
     "body";
+  font-family: sans-serif;
 }
 
 #content {
@@ -14,6 +15,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-areas: "inputs resume";
+  column-gap: 50px;
 }
 
 #resumeTitle {
@@ -22,8 +24,15 @@
 
 #userInputs {
   grid-area: inputs;
+  margin-right: 10px;
 }
 
 #resumeDisplay {
   grid-area: resume;
+  box-shadow:
+    0 13px 27px -5px rgba(50, 50, 93, 0.1),
+    0 8px 16px -8px rgba(0, 0, 0, 0.25);
+  background-color: white;
+  width: 21.59cm;
+  height: 27.94cm;
 }
