--- a/cv-application/src/styles/index.css
+++ b/cv-application/src/styles/index.css
@@ -1,5 +1,17 @@
+body {
+  background-color: #f3f4f6;
+}
+
+h1 {
+  margin: 0px;
+}
+
+h2 {
+  margin: 0px;
+}
+
 /* :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
