--- a/cv-application/src/styles/Buttons.css
+++ b/cv-application/src/styles/Buttons.css
@@ -3,4 +3,6 @@
   justify-content: space-between;
   border-radius: 12px;
   border: 1px solid black;
+  padding: 5px 10px 5px 10px;
+  margin-top: 15px;
 }
