--- a/cv-application/src/styles/Buttons.css
+++ b/cv-application/src/styles/Buttons.css
@@ -1,8 +1,48 @@
 .submitBtn {
   display: flex;
-  justify-content: space-between;
-  border-radius: 12px;
-  border: 1px solid black;
-  padding: 5px 10px 5px 10px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 16px;
+  border: 1px solid transparent;
+  padding: 8px;
+  width: 70px;
   margin-top: 15px;
+  background-color: #142a74;
+  color: white;
+  font-size: 1rem;
+}
+
+.submitBtn:hover {
+  background-color: #1d3a9a;
+  color: white;
+}
+
+.submitBtn:active {
+  background-color: #1d3a9a;
+  color: white;
+  transform: translateY(3px);
+}
+
+.addBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 16px;
+  border: 2px solid #142a74;
+  padding: 10px;
+  margin-top: 15px;
+  background-color: white;
+  color: black;
+  font-size: 1rem;
+}
+
+.addBtn:hover {
+  background-color: #1d3a9a;
+  color: white;
+}
+
+.addBtn:active {
+  background-color: #1d3a9a;
+  color: white;
+  transform: translateY(3px);
 }
