--- a/cv-application/src/styles/App.css
+++ b/cv-application/src/styles/App.css
@@ -7,7 +7,8 @@
   grid-template-areas:
     "title"
     "body";
-  font-family: sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.2;
 }
 
 #content {
@@ -31,13 +32,17 @@
 }
 
 #resumeDisplay {
+  position: sticky;
+  top: 20px;
   grid-area: resume;
   box-shadow:
-    0 13px 27px -5px rgba(50, 50, 93, 0.1),
+    0 13px 27px -5px rgba(50, 50, 93, 0.25),
     0 8px 16px -8px rgba(0, 0, 0, 0.25);
   background-color: white;
-  width: 816px;
-  height: 1056px;
+  /* width: 816px; */
+  width: 8.5in;
+  height: 11in;
+  /* height: 1056px; */
   display: grid;
   grid-template-rows: 150px 105px 105px 591px 105px;
   grid-template-areas:
@@ -46,4 +51,6 @@
     "skills"
     "experience"
     "school";
+  padding: 96px;
+  row-gap: 16px;
 }
