--- a/cv-application/src/styles/ResumeDetails.css
+++ b/cv-application/src/styles/ResumeDetails.css
@@ -2,6 +2,7 @@
   grid-area: personal;
   display: flex;
   flex-direction: column;
+  line-height: 1.6;
   /* display: grid;
   grid-template-rows: 1fr 0.25fr 0.25fr 0.25fr;
   grid-template-areas:
