--- a/cv-application/src/styles/UserDetails.css
+++ b/cv-application/src/styles/UserDetails.css
@@ -9,4 +9,7 @@
   margin-bottom: 10px;
   width: 400px;
   height: auto;
+  box-shadow:
+    0 13px 27px -5px rgba(50, 50, 93, 0.1),
+    0 8px 16px -8px rgba(0, 0, 0, 0.25);
 }
