--- a/cv-application/src/styles/index.css
+++ b/cv-application/src/styles/index.css
@@ -8,6 +8,13 @@ h3 {
   margin: 0px;
 }
 
+hr {
+  height: 3px;
+  border-width: 0;
+  border-radius: 5px;
+  background-color: #295ca3;
+}
+
 /* :root {
   font-family: Arial, sans-serif;
   line-height: 1.5;
