--- a/cv-application/src/styles/App.css
+++ b/cv-application/src/styles/App.css
@@ -43,14 +43,16 @@
   width: 8.5in;
   height: 11in;
   /* height: 1056px; */
-  display: grid;
+  /* display: grid;
   grid-template-rows: 150px 105px 105px 591px 105px;
   grid-template-areas:
     "personal"
     "summary"
     "skills"
     "experience"
-    "school";
+    "school"; */
+  display: flex;
+  flex-direction: column;
   padding: 96px;
-  row-gap: 16px;
+  row-gap: 40px;
 }
