--- a/cv-application/src/styles/EducationDetails.css
+++ b/cv-application/src/styles/EducationDetails.css
@@ -1,12 +1,39 @@
 #education-title {
-    color: #295ca3;
-    text-transform: uppercase;
-    font-size: 18px;
-  }
-  
-  .school-items {
-    font-size: 16px;
-    font-weight: 100;
-    line-height: 1.6;
-  }
-  
+  color: #295ca3;
+  text-transform: uppercase;
+  font-size: 18px;
+}
+
+.school-items {
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 1.6;
+}
+
+#allSchools {
+  margin: 0px;
+  padding: 0px;
+  display: grid;
+  align-items: start;
+  justify-items: start;
+  grid-auto-rows: min-content;
+  row-gap: 20px;
+  margin-top: 20px;
+}
+
+.school-name,
+.school-degree,
+.school-dates {
+  margin: 0px;
+  padding: 0px;
+  line-height: 1.6;
+}
+
+.school-name {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.school-dates {
+  color: #4b5563;
+}
